examples/errors/part2_semantic1_binary_operator_valid2.lya
dcl booltest bool = (((true == false)));
dcl inttest int = 12 + 15;
//dcl strtest CHARS[123] = "huehuehue" + "br";